[package]
name = "drive-icon-setter"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34.3", default-features = false, features = ["default_fonts", "glow"] }
image = { version = "0.25.10", default-features = false, features = ["png", "ico"] }
rfd = "0.17.2"
winreg = "0.56.0"
